# microservice-k8s

./: .gitignore  README.md
.github/workflows/: buid_store_img.yml  stock_up_api.yml  store_api.yml  store_db.yml
excodes/: configmap_aws.yaml  not_stop.sh  store-empty-to-factory-networkpolicy.yaml
excodes/redis_js_ex/: package-lock.json  package.json  pub.js  sub.js
factory/: docker-compose.yaml
factory/factory-front/: Dockerfile  package-lock.json  package.json  postcss.config.cjs  svelte.config.js
factory/factory-server/: .gitignore  Cargo.toml  Dockerfile  go.mod
factory/factory-server/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
infra/kube/: config.yaml  db.yaml  stock-up.yaml  stock-up_svc.yaml  store-empty-svc.yaml  store-empty.yaml  store-sell.yaml
infra/kube/db_first/: db.yaml  redis.yaml  redis_svc.yaml
infra/kube/first_deploy/: db.yaml  db_svc.yaml  redis.yaml
infra/kube/second_deploy/: config.yaml  stock-up.yaml  stock-up_svc.yaml
infra/kube/third_deploy/: config.yaml  (+4 more)
infra/terraform/: ecr.tf  ekcsg.tf  ekcvpc.tf  eksCluster.tf  eksClusterRole.tf  eksLog.tf  eksWorkerNodes.tf  outputs.tf  provider.tf  tfversion.tf  variables.tf
store/sell-api/: package-lock.json
store/sell-db/: Dockerfile
store/stock-empty-to-factory/: Dockerfile  README.md  index.js  package-lock.json  package.json
store/stock-up-api/: Dockerfile  index.js  package-lock.json  package.json
store/store-db/: Dockerfile  init.sql
store/store-msgq/: Dockerfile
store/store-sell-api/: Dockerfile  index.js  package-lock.json  package.json
(+5 files in other folders)
